--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,39 +1,29 @@
-# version: "3.8"
+version: '3'
 services:
+  zookeeper:
+    image: confluentinc/cp-zookeeper:7.4.0
+    container_name: zookeeper
+    environment:
+      ZOOKEEPER_CLIENT_PORT: 2181
+      ZOOKEEPER_TICK_TIME: 2000
+    ports:
+      - "2181:2181"
+
   kafka:
-    image: confluentinc/cp-kafka:latest
+    image: confluentinc/cp-kafka:7.4.0
     container_name: kafka
+    depends_on:
+      - zookeeper
     ports:
       - "9092:9092"
     environment:
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://host.docker.internal:9092
+      KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:29092,PLAINTEXT_HOST://localhost:9092
+      KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:29092,PLAINTEXT_HOST://0.0.0.0:9092
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-      KAFKA_NUM_PARTITIONS: 3    # More partitions = More parallelism
-      KAFKA_LOG_RETENTION_HOURS: 1  # Clear old messages faster
-      KAFKA_COMPRESSION_TYPE: snappy # Faster transport
-    depends_on:
-      - zookeeper
-
-  zookeeper:
-    image: confluentinc/cp-zookeeper:latest
-    container_name: zookeeper
-    ports:
-      - "2181:2181"
-    environment:
-      ZOOKEEPER_CLIENT_PORT: 2181
-  
-  control-center:
-    image: confluentinc/cp-enterprise-control-center:latest
-    container_name: control-center
-    ports:
-      - "9021:9021"
-    environment:
-      CONTROL_CENTER_KAFKA_BROKERCONNECT: kafka:9092
-      CONTROL_CENTER_ZOOKEEPER_CONNECT: zookeeper:2181
-      CONTROL_CENTER_BOOTSTRAP_SERVERS: kafka:9092 
-      CONTROL_CENTER_REPLICATION_FACTOR: 1
-    depends_on:
-      - kafka
-      - zookeeper
-    entrypoint: /bin/sh -c "until nc -z kafka 9092; do echo 'Waiting for Kafka...'; sleep 5; done; until nc -z zookeeper 2181; do echo 'Waiting for Zookeeper...'; sleep 5; done; /etc/confluent/docker/run"
+      KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
+      KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
+      KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
+      KAFKA_AUTO_CREATE_TOPICS_ENABLE: "true"
