--- a/Client/appsettings.Development.json
+++ b/Client/appsettings.Development.json
@@ -1,10 +1,9 @@
 ﻿{
   "Logging": {
-    "IncludeScopes": false,
     "LogLevel": {
-      "Default": "Debug",
-      "System": "Information",
-      "Microsoft": "Information"
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning",
+      "System": "Warning" // Detta minskar system-level loggar
     }
   }
 }
