--- a/Client/appsettings.json
+++ b/Client/appsettings.json
@@ -1,5 +1,12 @@
 ﻿{
   "ConnectionStrings": {
-    "ASPNETDbConnection": "Server=localhost;Initial Catalog=ASPNETDb;Integrated Security=True;Max Pool Size=100;Encrypt=false",
+    "ASPNETDbConnection": "Server=localhost;Initial Catalog=ASPNETDb;Integrated Security=True;Max Pool Size=100;Encrypt=false"
+  },
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning",
+      "System": "Warning" // Detta minskar system-level loggar
+    }
   }
 }
